@@ -1,3 +1,6 @@
+* Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
+- Renamed module from 'windowmanager' to 'gnome'
+
 * Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
 - Fix dependancies for simp 6 bump
 
